--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -99,7 +99,7 @@
       <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
     {% endif %}
     {% if entry.arxiv %}
-      <a href="http://arxiv.org/abs/{{ entry.eprint }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
+      <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
     {% endif %}
     {% if entry.doi %}
       <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">Journal</a>
