--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -31,17 +31,7 @@
       {{reference}}
     {% elsif entry.type == "seminar" %}
       <div class="title">
-        {% if entry.url %}
-          <a href="{{entry.url}}">{{entry.title}}</a>
-        {% else %}
-          {{entry.title}}
-        {% endif %}
-        {% if entry.slide %}
-          [<a href="{{entry.slide}}">slide</a>]
-        {% endif %}
-        {% if entry.video %}
-          [<a href="{{entry.video}}">video</a>]
-        {% endif %}
+        {{entry.title}}
       </div>
       <div class="periodical">
         {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
@@ -49,12 +39,6 @@
     {% else %}
       <div class="title">
         {{entry.title}}
-        {% if entry.slide %}
-          [<a href="{{entry.slide}}">slide</a>]
-        {% endif %}
-        {% if entry.video %}
-          [<a href="{{entry.video}}">video</a>]
-        {% endif %}
       </div>
       <div class="author">
         {% for author in entry.author_array %}
@@ -159,12 +143,15 @@
       <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
       {% endif %}
     {% endif %}
-    {% if entry.slides %}
-      {% if entry.slides contains '://' %}
-      <a href="{{ entry.slides }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
+    {% if entry.slide %}
+      {% if entry.slide contains '://' %}
+      <a href="{{ entry.slide }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
       {% else %}
-      <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
+      <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
       {% endif %}
+    {% endif %}
+    {% if entry.video %}
+      <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
     {% endif %}
     {% if entry.website %}
       <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
