--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -2,18 +2,8 @@
 ---
 
 <div class="row">
-  <div class="col-sm-3 {% if entry.preview %}preview{% else %}abbr{% endif %}">
-    {%- if entry.preview -%}
-      {% if entry.preview contains '://' -%}
-      <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
-      {%- else -%}
-        {%- assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' -%}
-        {% include figure.html
-        path=entry_path
-        class="preview z-depth-1 rounded"
-        alt=entry.preview -%}
-      {%- endif -%}
-    {%- elsif entry.abbr -%}
+  {% if entry.abbr %}
+    <div class="col-sm-3 {% if entry.preview %}preview{% else %}abbr{% endif %}">
       {%- if site.data.venues[entry.abbr] -%}
         {%- assign venue_style = nil -%}
         {%- if site.data.venues[entry.abbr].color != blank -%}
@@ -23,10 +13,10 @@
       {%- else -%}
         <abbr class="badge">{{entry.abbr}}</abbr>
       {%- endif -%}
-    {%- endif -%}
-  </div>
+    </div>
+  {% endif %}
 
-  <div id="{{entry.key}}" class="col-sm-8">
+  <div id="{{entry.key}}" class="col-sm-7">
     {% if entry.type == "thesis" %}
       {{reference}}
     {% elsif entry.type == "seminar" %}
