--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   {% if entry.abbr %}
-    <div class="col-sm-3 {% if entry.preview %}preview{% else %}abbr{% endif %}">
+    {% if entry.type == "presentation" %} <div class="col-sm-2"> {% else %} <div class="col-sm-3"> {% endif %}
       {%- if site.data.venues[entry.abbr] -%}
         {%- assign venue_style = nil -%}
         {%- if site.data.venues[entry.abbr].color != blank -%}
@@ -16,7 +16,7 @@
     </div>
   {% endif %}
 
-  <div id="{{entry.key}}" class="col-sm-7">
+  {% if entry.type == "seminar" %} <div id="{{entry.key}}" class="col-sm-10"> {% elif entry.type == "presentation" %} <div id="{{entry.key}}" class="col-sm-8"> {% else %} <div id="{{entry.key}}" class="col-sm-7"> {% endif %}
     {% if entry.type == "thesis" %}
       {{reference}}
     {% elsif entry.type == "seminar" %}
