--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -3,20 +3,34 @@
 
 <div class="row">
   {% if entry.abbr %}
-    {% if entry.type == "presentation" %} <div class="col-sm-2"> {% else %} <div class="col-sm-3"> {% endif %}
-      {%- if site.data.venues[entry.abbr] -%}
-        {%- assign venue_style = nil -%}
-        {%- if site.data.venues[entry.abbr].color != blank -%}
-          {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
+    {% if entry.type == "presentation" %}
+      <div class="col-sm-2">
+        {%- if site.data.venues[entry.abbr] -%}
+          {%- assign venue_style = nil -%}
+          {%- if site.data.venues[entry.abbr].color != blank -%}
+            {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
+          {%- endif -%}
+          <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
+        {%- else -%}
+          <abbr class="badge">{{entry.abbr}}</abbr>
         {%- endif -%}
-        <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
-      {%- else -%}
-        <abbr class="badge">{{entry.abbr}}</abbr>
-      {%- endif -%}
-    </div>
+      </div>
+    {% else %}
+      <div class="col-sm-3">
+        {%- if site.data.venues[entry.abbr] -%}
+          {%- assign venue_style = nil -%}
+          {%- if site.data.venues[entry.abbr].color != blank -%}
+            {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
+          {%- endif -%}
+          <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
+        {%- else -%}
+          <abbr class="badge">{{entry.abbr}}</abbr>
+        {%- endif -%}
+      </div>
+    {% endif %}
   {% endif %}
 
-  {% if entry.type == "seminar" %} <div id="{{entry.key}}" class="col-sm-10"> {% elif entry.type == "presentation" %} <div id="{{entry.key}}" class="col-sm-8"> {% else %} <div id="{{entry.key}}" class="col-sm-7"> {% endif %}
+  <div id="{{entry.key}}" {% if entry.type == "seminar" %} class="col-sm-10" {% elif entry.type == "presentation" %} class="col-sm-8" {% else %} class="col-sm-7" {% endif}>
     {% if entry.type == "thesis" %}
       {{reference}}
     {% elsif entry.type == "seminar" %}
@@ -106,26 +120,6 @@
     {% if entry.bibtex_show %}
         <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
     {% endif %}
-    {% if entry.pdf %}
-      {% if entry.pdf contains '://' %}
-      <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
-      {% else %}
-      <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
-      {% endif %}
-    {% endif %}
-    {% if entry.supp %}
-      {% if entry.supp contains '://' %}
-      <a href="{{ entry.supp }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
-      {% else %}
-      <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
-      {% endif %}
-    {% endif %}
-    {% if entry.blog %}
-      <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
-    {% endif %}
-    {% if entry.code %}
-      <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
-    {% endif %}
     {% if entry.poster %}
       {% if entry.poster contains '://' %}
       <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
@@ -142,9 +136,6 @@
     {% endif %}
     {% if entry.video %}
       <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
-    {% endif %}
-    {% if entry.website %}
-      <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
     {% endif %}
     </div>
 
