--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -30,127 +30,377 @@
     {% endif %}
   {% endif %}
 
-  <div id="{{entry.key}}" class="{% if entry.type == 'seminar' %}col-sm-10{% elif entry.type == 'presentation' %}col-sm-8{% else %}col-sm-7{% endif %}">
-    {% if entry.type == "thesis" %}
-      {{reference}}
-    {% elsif entry.type == "seminar" %}
-      <div class="title">
-        {{entry.title}}
-      </div>
-      <div class="periodical">
-        {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
-      </div>
-    {% else %}
-      <div class="title">
-        {{entry.title}}
-      </div>
-      <div class="author">
-        {% for author in entry.author_array %}
-          {% assign author_is_self = false %}
-          {% if author.last == site.scholar.last_name%}
-            {% if site.scholar.first_name contains author.first%}
-              {% assign author_is_self = true %}
-            {% endif %}
-          {% endif %}
-          {% assign coauthor_url = nil %}
-          {% if site.data.coauthors[author.last] %}
-            {% for coauthor in site.data.coauthors[author.last] %}
-              {% if coauthor.firstname contains author.first %}
-                {% assign coauthor_url = coauthor.url %}
-                {% break %}
+  {% if entry.type == 'seminar' %}
+    <div id="{{entry.key}}" class="col-sm-10">
+      {% if entry.type == "thesis" %}
+        {{reference}}
+      {% elsif entry.type == "seminar" %}
+        <div class="title">
+          {{entry.title}}
+        </div>
+        <div class="periodical">
+          {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
+        </div>
+      {% else %}
+        <div class="title">
+          {{entry.title}}
+        </div>
+        <div class="author">
+          {% for author in entry.author_array %}
+            {% assign author_is_self = false %}
+            {% if author.last == site.scholar.last_name%}
+              {% if site.scholar.first_name contains author.first%}
+                {% assign author_is_self = true %}
               {% endif %}
-            {% endfor %}
-          {% endif %}
-          
-          {% if forloop.length == 1 %}
-            {% if author_is_self %}
-              {{author.first}} {{author.last}} 
-            {% else %}
-              {{author.first}} {{author.last}} 
             {% endif %}
-          {% else %}
-            {% unless forloop.last %}
-              {% if author_is_self %}
-                {{author.first}} {{author.last}}, 
-              {% else %}
-                {% if coauthor_url %}
-                  <a href="{{coauthor_url}}" target="_blank">{{author.first}} {{author.last}}</a>,
-                {% else %}
-                  {{author.first}} {{author.last}},
+            {% assign coauthor_url = nil %}
+            {% if site.data.coauthors[author.last] %}
+              {% for coauthor in site.data.coauthors[author.last] %}
+                {% if coauthor.firstname contains author.first %}
+                  {% assign coauthor_url = coauthor.url %}
+                  {% break %}
                 {% endif %}
-              {% endif %}
-            {% else %}
+              {% endfor %}
+            {% endif %}
+            
+            {% if forloop.length == 1 %}
               {% if author_is_self %}
                 {{author.first}} {{author.last}} 
               {% else %}
-                {% if coauthor_url %}
-                  <a href="{{coauthor_url}}" target="_blank">{{author.first}} {{author.last}},</a>
-                {% else %}
-                  {{author.first}} {{author.last}} 
-                {% endif %}
+                {{author.first}} {{author.last}} 
               {% endif %}
-            {% endunless %}
+            {% else %}
+              {% unless forloop.last %}
+                {% if author_is_self %}
+                  {{author.first}} {{author.last}}, 
+                {% else %}
+                  {% if coauthor_url %}
+                    <a href="{{coauthor_url}}" target="_blank">{{author.first}} {{author.last}}</a>,
+                  {% else %}
+                    {{author.first}} {{author.last}},
+                  {% endif %}
+                {% endif %}
+              {% else %}
+                {% if author_is_self %}
+                  {{author.first}} {{author.last}} 
+                {% else %}
+                  {% if coauthor_url %}
+                    <a href="{{coauthor_url}}" target="_blank">{{author.first}} {{author.last}},</a>
+                  {% else %}
+                    {{author.first}} {{author.last}} 
+                  {% endif %}
+                {% endif %}
+              {% endunless %}
+            {% endif %}
+          {% endfor %}
+        </div>
+
+        <div class="periodical">
+        {% if entry.type == "article" %}
+          {% if entry.abbr == "arXiv" %}
+            arXiv:{{entry.arxiv}} ({{entry.year}}).
+          {% else %}
+            {{entry.journal}} <b>{{entry.volume}}</b>, {{entry.pages}} ({{entry.year}}).
           {% endif %}
-        {% endfor %}
-      </div>
-
-      <div class="periodical">
-      {% if entry.type == "article" %}
-        {% if entry.abbr == "arXiv" %}
-          arXiv:{{entry.arxiv}} ({{entry.year}}).
-        {% else %}
-          {{entry.journal}} <b>{{entry.volume}}</b>, {{entry.pages}} ({{entry.year}}).
+        {% elsif entry.type == "presentation" %}
+          <a href="{{entry.url}}">{{entry.journal}}</a>, {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
         {% endif %}
-      {% elsif entry.type == "presentation" %}
-        <a href="{{entry.url}}">{{entry.journal}}</a>, {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
+        </div>
+      {% endif %}
+
+      <div class="links">
+      {% if entry.abstract %}
+        <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
+      {% endif %}
+      {% if entry.arxiv %}
+        <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
+      {% endif %}
+      {% if entry.doi %}
+        <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">Journal</a>
+      {% endif %}
+      {% if entry.bibtex_show %}
+          <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
+      {% endif %}
+      {% if entry.poster %}
+        {% if entry.poster contains '://' %}
+        <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+        {% else %}
+        <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+        {% endif %}
+      {% endif %}
+      {% if entry.slide %}
+        {% if entry.slide contains '://' %}
+        <a href="{{ entry.slide }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
+        {% else %}
+        <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
+        {% endif %}
+      {% endif %}
+      {% if entry.video %}
+        <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
       {% endif %}
       </div>
-    {% endif %}
 
-    <div class="links">
-    {% if entry.abstract %}
-      <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
-    {% endif %}
-    {% if entry.arxiv %}
-      <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
-    {% endif %}
-    {% if entry.doi %}
-      <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">Journal</a>
-    {% endif %}
-    {% if entry.bibtex_show %}
-        <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
-    {% endif %}
-    {% if entry.poster %}
-      {% if entry.poster contains '://' %}
-      <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
-      {% else %}
-      <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+      <!-- Hidden abstract block -->
+      {% if entry.abstract %}
+      <div class="abstract hidden">
+        <p>{{ entry.abstract }}</p>
+      </div>
       {% endif %}
-    {% endif %}
-    {% if entry.slide %}
-      {% if entry.slide contains '://' %}
-      <a href="{{ entry.slide }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
-      {% else %}
-      <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
+
+      <!-- Hidden bibtex block -->
+      {% if entry.bibtex_show %}
+      <div class="bibtex hidden">
+        {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
+      </div>
       {% endif %}
-    {% endif %}
-    {% if entry.video %}
-      <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
-    {% endif %}
     </div>
+  {% elif entry.type == 'presentation' %}
+    <div id="{{entry.key}}" class="col-sm-8">
+      {% if entry.type == "thesis" %}
+        {{reference}}
+      {% elsif entry.type == "seminar" %}
+        <div class="title">
+          {{entry.title}}
+        </div>
+        <div class="periodical">
+          {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
+        </div>
+      {% else %}
+        <div class="title">
+          {{entry.title}}
+        </div>
+        <div class="author">
+          {% for author in entry.author_array %}
+            {% assign author_is_self = false %}
+            {% if author.last == site.scholar.last_name%}
+              {% if site.scholar.first_name contains author.first%}
+                {% assign author_is_self = true %}
+              {% endif %}
+            {% endif %}
+            {% assign coauthor_url = nil %}
+            {% if site.data.coauthors[author.last] %}
+              {% for coauthor in site.data.coauthors[author.last] %}
+                {% if coauthor.firstname contains author.first %}
+                  {% assign coauthor_url = coauthor.url %}
+                  {% break %}
+                {% endif %}
+              {% endfor %}
+            {% endif %}
+            
+            {% if forloop.length == 1 %}
+              {% if author_is_self %}
+                {{author.first}} {{author.last}} 
+              {% else %}
+                {{author.first}} {{author.last}} 
+              {% endif %}
+            {% else %}
+              {% unless forloop.last %}
+                {% if author_is_self %}
+                  {{author.first}} {{author.last}}, 
+                {% else %}
+                  {% if coauthor_url %}
+                    <a href="{{coauthor_url}}" target="_blank">{{author.first}} {{author.last}}</a>,
+                  {% else %}
+                    {{author.first}} {{author.last}},
+                  {% endif %}
+                {% endif %}
+              {% else %}
+                {% if author_is_self %}
+                  {{author.first}} {{author.last}} 
+                {% else %}
+                  {% if coauthor_url %}
+                    <a href="{{coauthor_url}}" target="_blank">{{author.first}} {{author.last}},</a>
+                  {% else %}
+                    {{author.first}} {{author.last}} 
+                  {% endif %}
+                {% endif %}
+              {% endunless %}
+            {% endif %}
+          {% endfor %}
+        </div>
 
-    <!-- Hidden abstract block -->
-    {% if entry.abstract %}
-    <div class="abstract hidden">
-      <p>{{ entry.abstract }}</p>
-    </div>
-    {% endif %}
+        <div class="periodical">
+        {% if entry.type == "article" %}
+          {% if entry.abbr == "arXiv" %}
+            arXiv:{{entry.arxiv}} ({{entry.year}}).
+          {% else %}
+            {{entry.journal}} <b>{{entry.volume}}</b>, {{entry.pages}} ({{entry.year}}).
+          {% endif %}
+        {% elsif entry.type == "presentation" %}
+          <a href="{{entry.url}}">{{entry.journal}}</a>, {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
+        {% endif %}
+        </div>
+      {% endif %}
 
-    <!-- Hidden bibtex block -->
-    {% if entry.bibtex_show %}
-    <div class="bibtex hidden">
-      {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
+      <div class="links">
+      {% if entry.abstract %}
+        <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
+      {% endif %}
+      {% if entry.arxiv %}
+        <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
+      {% endif %}
+      {% if entry.doi %}
+        <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">Journal</a>
+      {% endif %}
+      {% if entry.bibtex_show %}
+          <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
+      {% endif %}
+      {% if entry.poster %}
+        {% if entry.poster contains '://' %}
+        <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+        {% else %}
+        <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+        {% endif %}
+      {% endif %}
+      {% if entry.slide %}
+        {% if entry.slide contains '://' %}
+        <a href="{{ entry.slide }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
+        {% else %}
+        <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
+        {% endif %}
+      {% endif %}
+      {% if entry.video %}
+        <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
+      {% endif %}
+      </div>
+
+      <!-- Hidden abstract block -->
+      {% if entry.abstract %}
+      <div class="abstract hidden">
+        <p>{{ entry.abstract }}</p>
+      </div>
+      {% endif %}
+
+      <!-- Hidden bibtex block -->
+      {% if entry.bibtex_show %}
+      <div class="bibtex hidden">
+        {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
+      </div>
+      {% endif %}
     </div>
-    {% endif %}
-  </div>
+  {% else %}
+    <div id="{{entry.key}}" class="col-sm-7">
+      {% if entry.type == "thesis" %}
+        {{reference}}
+      {% elsif entry.type == "seminar" %}
+        <div class="title">
+          {{entry.title}}
+        </div>
+        <div class="periodical">
+          {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
+        </div>
+      {% else %}
+        <div class="title">
+          {{entry.title}}
+        </div>
+        <div class="author">
+          {% for author in entry.author_array %}
+            {% assign author_is_self = false %}
+            {% if author.last == site.scholar.last_name%}
+              {% if site.scholar.first_name contains author.first%}
+                {% assign author_is_self = true %}
+              {% endif %}
+            {% endif %}
+            {% assign coauthor_url = nil %}
+            {% if site.data.coauthors[author.last] %}
+              {% for coauthor in site.data.coauthors[author.last] %}
+                {% if coauthor.firstname contains author.first %}
+                  {% assign coauthor_url = coauthor.url %}
+                  {% break %}
+                {% endif %}
+              {% endfor %}
+            {% endif %}
+            
+            {% if forloop.length == 1 %}
+              {% if author_is_self %}
+                {{author.first}} {{author.last}} 
+              {% else %}
+                {{author.first}} {{author.last}} 
+              {% endif %}
+            {% else %}
+              {% unless forloop.last %}
+                {% if author_is_self %}
+                  {{author.first}} {{author.last}}, 
+                {% else %}
+                  {% if coauthor_url %}
+                    <a href="{{coauthor_url}}" target="_blank">{{author.first}} {{author.last}}</a>,
+                  {% else %}
+                    {{author.first}} {{author.last}},
+                  {% endif %}
+                {% endif %}
+              {% else %}
+                {% if author_is_self %}
+                  {{author.first}} {{author.last}} 
+                {% else %}
+                  {% if coauthor_url %}
+                    <a href="{{coauthor_url}}" target="_blank">{{author.first}} {{author.last}},</a>
+                  {% else %}
+                    {{author.first}} {{author.last}} 
+                  {% endif %}
+                {% endif %}
+              {% endunless %}
+            {% endif %}
+          {% endfor %}
+        </div>
+
+        <div class="periodical">
+        {% if entry.type == "article" %}
+          {% if entry.abbr == "arXiv" %}
+            arXiv:{{entry.arxiv}} ({{entry.year}}).
+          {% else %}
+            {{entry.journal}} <b>{{entry.volume}}</b>, {{entry.pages}} ({{entry.year}}).
+          {% endif %}
+        {% elsif entry.type == "presentation" %}
+          <a href="{{entry.url}}">{{entry.journal}}</a>, {{entry.location}}, {{entry.date}} {{entry.month}} {{entry.year}}.
+        {% endif %}
+        </div>
+      {% endif %}
+
+      <div class="links">
+      {% if entry.abstract %}
+        <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
+      {% endif %}
+      {% if entry.arxiv %}
+        <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
+      {% endif %}
+      {% if entry.doi %}
+        <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">Journal</a>
+      {% endif %}
+      {% if entry.bibtex_show %}
+          <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
+      {% endif %}
+      {% if entry.poster %}
+        {% if entry.poster contains '://' %}
+        <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+        {% else %}
+        <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+        {% endif %}
+      {% endif %}
+      {% if entry.slide %}
+        {% if entry.slide contains '://' %}
+        <a href="{{ entry.slide }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
+        {% else %}
+        <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slide</a>
+        {% endif %}
+      {% endif %}
+      {% if entry.video %}
+        <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
+      {% endif %}
+      </div>
+
+      <!-- Hidden abstract block -->
+      {% if entry.abstract %}
+      <div class="abstract hidden">
+        <p>{{ entry.abstract }}</p>
+      </div>
+      {% endif %}
+
+      <!-- Hidden bibtex block -->
+      {% if entry.bibtex_show %}
+      <div class="bibtex hidden">
+        {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
+      </div>
+      {% endif %}
+    </div>
+  {% endif %}
 </div>
