--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -30,7 +30,7 @@
     {% endif %}
   {% endif %}
 
-  {% if entry.type == 'seminar' %}
+  {% if entry.type == "seminar" %}
     <div id="{{entry.key}}" class="col-sm-10">
       {% if entry.type == "thesis" %}
         {{reference}}
@@ -154,7 +154,7 @@
       </div>
       {% endif %}
     </div>
-  {% elif entry.type == 'presentation' %}
+  {% elif entry.type == "presentation" %}
     <div id="{{entry.key}}" class="col-sm-8">
       {% if entry.type == "thesis" %}
         {{reference}}
