--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -3,17 +3,31 @@
 
 <div class="row">
   {% if entry.abbr %}
-    <div class="col-sm-3 abbr">
-      {%- if site.data.venues[entry.abbr] -%}
-        {%- assign venue_style = nil -%}
-        {%- if site.data.venues[entry.abbr].color != blank -%}
-          {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
+    {% if entry.type == "presentation" %}
+      <div class="col-sm-2 abbr">
+        {%- if site.data.venues[entry.abbr] -%}
+          {%- assign venue_style = nil -%}
+          {%- if site.data.venues[entry.abbr].color != blank -%}
+            {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
+          {%- endif -%}
+          <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
+        {%- else -%}
+          <abbr class="badge">{{entry.abbr}}</abbr>
         {%- endif -%}
-        <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
-      {%- else -%}
-        <abbr class="badge">{{entry.abbr}}</abbr>
-      {%- endif -%}
-    </div>
+      </div>
+    {% else %}
+      <div class="col-sm-3 abbr">
+        {%- if site.data.venues[entry.abbr] -%}
+          {%- assign venue_style = nil -%}
+          {%- if site.data.venues[entry.abbr].color != blank -%}
+            {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
+          {%- endif -%}
+          <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
+        {%- else -%}
+          <abbr class="badge">{{entry.abbr}}</abbr>
+        {%- endif -%}
+      </div>
+    {% endif %}
   {% endif %}
 
   <div id="{{entry.key}}" class="col-sm-7">
