--- a/_includes/header.html
+++ b/_includes/header.html
@@ -107,6 +107,7 @@
             </ul>
           </div>
         </div>
+        {% raw %}{% include header_custom.html %}{% endraw %}
       </nav>
 {% if site.enable_progressbar %}
       <!-- Scrolling Progress Bar -->
