--- a/_layouts/cv_ja.html
+++ b/_layouts/cv_ja.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-<!-- _layouts/cv.html -->
+<!-- _layouts/cv_ja.html -->
         <div class="post">
 
           <header class="post-header">
-            <h1 class="post-title">{{履歴書}} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
+            <h1 class="post-title">履歴書 {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
             <p class="post-description">{{ page.description }}</p>
           </header>
 
