--- a/_layouts/cv_ja.html
+++ b/_layouts/cv_ja.html
@@ -10,7 +10,7 @@ layout: default
           </header>
 
           <article>
-            <div class="cv_ja">
+            <div class="cv">
               {% for entry in site.data.cv_ja %}
                 <div class="card mt-3 p-3">
                   <h3 class="card-title font-weight-medium">{{ entry.title }}</h3>
